src/objects/AMS_WAD_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>AMS Wad Settings</description>
    <fields>
        <fullName>Field__c</fullName>
        <description>Salesforce field - &quot;Object Name&quot;.&quot;Field Name&quot;</description>
        <label>Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>Wad field Position</description>
        <label>Position</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>WAD field size</description>
        <label>Size</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AMS Wad Settings</label>
</CustomObject>